# lolooper

./: .gitignore  .gitmodules  AGENTS.md  README.md  SPEC.md  TODO.md  pyproject.toml
docs/: arpeggiator.md  midi-mapping.md  patterns.md  sf2-instruments.md  song-format.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: pwa.spec.ts
frontend/public/: manifest.json
frontend/src/: App.vue  style.css
frontend/src/components/: IAPanel.vue  PatternGrid.vue  TrackList.vue  Transport.test.ts  Transport.vue
frontend/src/composables/: useWebMIDI.ts
frontend/src/data/: defaultPatterns.ts
frontend/src/db/: database.test.ts  database.ts
frontend/src/router/: index.ts
frontend/src/stores/: midi.test.ts  midi.ts  patterns.test.ts  patterns.ts  setlist.test.ts  setlist.ts  songs-advanced.test.ts  songs.test.ts  songs.ts
frontend/src/views/: PatternEditorPage.vue  SetlistPage.test.ts  SetlistPage.vue  SettingsPage.vue  SongEditorPage.test.ts  SongEditorPage.vue
frontend/src/worker/: ia-worker.test.ts  ia-worker.ts
lolooper/: __init__.py  __main__.py  api.py  cli.py  config.py  engine.py  midi.py  patterns.py  samples.py  track.py
plugin/: CMakeLists.txt
plugin/Source/: Arpeggiator.cpp  Arpeggiator.h  ChordRecognizer.cpp  ChordRecognizer.h  InstrumentLib.cpp  InstrumentLib.h  Mixer.cpp  Mixer.h  Pattern.cpp  Pattern.h  PitchDetector.cpp  PitchDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleLib.cpp  SampleLib.h  Sequencer.cpp  Sequencer.h
plugin/Tests/: TestArpeggiator.cpp  TestChordRecognizer.cpp  TestInstrumentLib.cpp  TestMixer.cpp  TestPattern.cpp  TestPitchDetector.cpp  TestPluginProcessor.cpp  TestSampleLib.cpp  TestSequencer.cpp
plugin/Tests/e2e/: run_e2e_tests.sh  test_chord_detect.cpp  test_chord_detection.sh  test_integration.sh  test_interactions.sh  test_midi_control.sh
plugin/data/patterns/: frevo.json  ijexa.json  intro.json  maracatu.json  pagode.json  partido_alto.json  samba.json  samba_reggae.json  virada.json
tests/: test_core.py
