[project]
name = "lolooper"
version = "0.1.0"
description = "Live performance looper for Brazilian samba/pagode — MIDI + AI controllable"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fernando Passos", email = "passos@example.com" }]
keywords = ["samba", "pagode", "looper", "midi", "live-performance", "brazilian-music"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

dependencies = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "mido>=1.3.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
midi = ["python-rtmidi>=1.5.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
lolooper = "lolooper.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lolooper*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
